--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         </div>
                     </div> 
                     <div class="score-card">
-                        <p class="team">GUEST</p>  
+                        <p class="team">AWAY</p>  
                         <div class="score">
                             <p id="guest-score">0</p>
                         </div>
